manifests/apps/media/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
  namespace: media
  labels:
    app: media-manager
    component: prowlarr
spec:
  selector:
    app: media-manager
    component: prowlarr
  ports:
  - port: 9696
    name: webui
    protocol: TCP
